CSS fixes for moreInfoModal and fixed cg modal not showing on reselecting same marker bug

--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,13 @@
 }
 .cgModalContent {
   display: grid;
-  grid-template-rows: 50px 50px;
-  grid-template-columns: 33.33% 33.33% 33.33%;
+  grid-template-rows: repeat(4,20px);
+  grid-template-columns: 1fr 1fr;
   box-shadow: 0px -3px 5px grey;
+}
+.cgName {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  background-color: #EEE9;
+  font-weight: bold;
 }
